# react-server

./: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml  tsconfig.json
.github/actions/pnpm/: action.yml
.github/workflows/: CI.yml  ci.yml  release.yml
__test__/: index.spec.mjs
__test__/fixtures/: basic.js  import-client-and-use-server.js  use-server-and-client.js
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
src/transform/: mod.rs  react_server_action.rs  validate.rs
src/transforms/: mod.rs  react_actions.rs
tests/: index.spec.ts  index.unit.ts
