[package]
edition = "2021"
name = "react-server"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.7", default-features = false, features = ["napi9", "async"] }
napi-derive = "2.16.6"
serde_json = "1.0.118"
oxc_allocator = { version = "0.15.0" }
oxc_span = { version = "0.15.0" }
oxc_ast = { version = "0.15.0" }
oxc_syntax = { version = "0.15.0" }
oxc_diagnostics = { version = "0.15.0" }
oxc_parser = { version = "0.15.0" }
futures = "0.3.30"
tokio = { version = "1.38.0", features = ["default", "fs"] }

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
strip = "symbols"
