[package]
edition = "2021"
name = "rsc-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0-alpha.3", default-features = false, features = ["napi9", "async"] }
napi-derive = "3.0.0-alpha.2"
serde_json = "1.0.118"
oxc_allocator = { version = "0.16.1" }
oxc_codegen = { version = "0.16.1" }
oxc_span = { version = "0.16.1" }
oxc_ast = { version = "0.16.1" }
oxc_semantic = { version = "0.16.1" }
oxc_syntax = { version = "0.16.1" }
oxc_diagnostics = { version = "0.16.1" }
oxc_parser = { version = "0.16.1" }
futures = "0.3.30"
tokio = { version = "1.38.0", features = ["default", "fs"] }
sha1 = "0.10"
hex = "0.4"

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
strip = "symbols"
