[package]
edition = "2021"
name = "react-server-action"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.8", default-features = false, features = ["napi9", "async"] }
napi-derive = "2.16.6"
serde_json = "1.0"
oxc_allocator = { version = "0.16.2" }
oxc_codegen = { version = "0.16.2" }
oxc_span = { version = "0.16.2" }
oxc_ast = { version = "0.16.2" }
oxc_semantic = { version = "0.16.2" }
oxc_syntax = { version = "0.16.2" }
oxc_diagnostics = { version = "0.16.2" }
oxc_parser = { version = "0.16.2" }
futures = "0.3.30"
tokio = { version = "1.38.0", features = ["default", "fs"] }
sha1 = "0.10"
hex = "0.4"

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
strip = "symbols"
